--- a/style.css
+++ b/style.css
@@ -215,9 +215,10 @@ body {
     top: 50%;
     right: 10%;
     transform: translateY(-50%);
-    width: 300px;
-    height: 300px;
-    z-index: 1500;
+    width: 500px;
+    height: 500px;
+    z-index: 2500;
+    opacity: 0.4;
 }
 
 canvas {
