--- a/style.css
+++ b/style.css
@@ -211,8 +211,8 @@ body {
     top: 50%;
     right: 50%;
     transform: translateY(-50%, -50%);
-    width: 1200px;
-    height: 1200px;
+    width: 100vw;
+    height: 100vh;
     z-index: -1;
     opacity: 0.3;
     pointer-events: none;
