--- a/education.css
+++ b/education.css
@@ -212,22 +212,26 @@ body {
     margin: auto;
     padding: 50px 0;
     text-align: left;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 /* Skills Heading */
 .skills-container h1 {
-    font-size: 50px;
+    font-size: 60px;
     font-weight: 700;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 
 /* Skills List */
 .skills-list {
-    font-size: 20px;
-    line-height: 1.8;
+    font-size: 24px;
+    line-height: 2;
     list-style-type: disc;
-    padding-left: 40px;
+    padding-left: 50px;
 }
 
 /* Bold category headings */
@@ -239,6 +243,7 @@ body {
 @media (max-width: 768px) {
     .skills-container {
         max-width: 90%;
+        height: auto;
     }
 
     .skills-list {
