--- a/education.css
+++ b/education.css
@@ -211,7 +211,7 @@ body {
     max-width: 70%;
     margin: auto;
     padding: 50px 0;
-    text-align: left;
+    text-align: center;
     height: 100vh;
     display: flex;
     flex-direction: column;
