--- a/education.css
+++ b/education.css
@@ -208,7 +208,7 @@ body {
 }
 /* Skills Section */
 .skills-container {
-    max-width: 70%;
+    max-width: 80%;
     margin: auto;
     padding: 50px 0;
     text-align: center;
@@ -223,7 +223,7 @@ body {
     font-size: 40px;
     font-weight: 700;
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 /* Skills List */
@@ -231,7 +231,9 @@ body {
     font-size: 18px;
     line-height: 3;
     list-style-type: disc;
-    padding-left: 50px;
+    padding-left: 0;
+    display: incline-block;
+    text-align: left;
 }
 .skills-lists li { 
     margin-bottom:20px;
